trying to render new view

--- a/app/views/jsonfiles/index.html.haml
+++ b/app/views/jsonfiles/index.html.haml
@@ -1,2 +1,4 @@
 -#  This file is app/views/jsonfiles/index.html.haml
-%h1 All Json Files
+%h2 All Json Files
+
+= link_to 'Add new file', new_jsonfile_path
