--- a/app/views/jsonfiles/index.html.haml
+++ b/app/views/jsonfiles/index.html.haml
@@ -11,4 +11,4 @@
         %td= file.title
         %td= link_to "More about #{file.title}", jsonfiles_path(file)
 
-= link_to 'Add new Json File', new_jsonfiles_path
+= link_to 'Add new Json File', new_jsonfile_path
