--- a/app/views/jsonfiles/new.html.haml
+++ b/app/views/jsonfiles/new.html.haml
@@ -1,8 +1,11 @@
 %h1 Create New Jsonfile
 
-= form_tag jsonfiles_path do
+= form_tag jsonfiles_path, multipart: true do
 
   = label :jsonfile, :title, 'Title'
-  = file_field_tag :file
+  = text_field :jsonfile, 'title'
+
+  = label :jsonfile, :content, 'Rating'
+  = file_field_tag :content
 
   = submit_tag 'import'
