--- a/app/views/jsonfiles/show.html.haml
+++ b/app/views/jsonfiles/show.html.haml
@@ -1,12 +1,13 @@
+-# in app/views/jsonfiles/show.html.haml
+
 %h3 Details about #{@jsonfile.title}
 
 %ul#details
   %li
     Title:
     = @jsonfile.title
+  %li
+    Content:
+    = @jsonfile.content
 
-%h4 Description:
-
-%p#description= @movie.description
-
-= link_to 'Back to movie list', movies_path
+= link_to 'Back to jsonfile list', jsonfiles_path
