Fixed views, names, flash

--- a/app/views/jsonfiles/index.html.haml
+++ b/app/views/jsonfiles/index.html.haml
@@ -8,8 +8,8 @@
   %tbody
     - @jsonfiles.each do |file|
       %tr
-        %td= file.title
-        %td= link_to "More about #{file.title}", jsonfile_path(file)
+        %td= file.name
+        %td= link_to "More about #{file.name}", jsonfile_path(file)
 
 = link_to 'Add new Json File', new_jsonfile_path
 
