--- a/app/views/jsonfiles/new.html.haml
+++ b/app/views/jsonfiles/new.html.haml
@@ -2,10 +2,14 @@
 
 = form_tag jsonfiles_path, multipart: true do
 
-  = label :jsonfile, :title, 'Title'
-  = text_field :jsonfile, 'title'
+  = label :jsonfile, :name, 'File Name'
+  = text_field :jsonfile, 'name'
 
-  = label :jsonfile, :content, 'Rating'
+  = label :jsonfile, :content, 'File'
   = file_field_tag :content
 
   = submit_tag 'import'
+
+
+
+= link_to 'Back to jsonfile list', jsonfiles_path
