--- a/app/views/jsonfiles/show.html.haml
+++ b/app/views/jsonfiles/show.html.haml
@@ -1,13 +1,17 @@
 -# in app/views/jsonfiles/show.html.haml
 
-%h3 Details about #{@jsonfile.title}
+%h3 Json Content for #{@jsonfile.name}
 
 %ul#details
   %li
-    Title:
-    = @jsonfile.title
+    File Name:
+    = @jsonfile.name
   %li
     Content:
     = @jsonfile.content
 
 = link_to 'Back to jsonfile list', jsonfiles_path
+
+= button_to 'Delete', jsonfile_path(@jsonfile), :method => :delete, :confirm => 'Are you sure?'
+
+
