d3 working in view, grabbing JSON from page

--- a/app/views/jsonfiles/show.html.haml
+++ b/app/views/jsonfiles/show.html.haml
@@ -14,4 +14,6 @@
 
 = button_to 'Delete', jsonfile_path(@jsonfile), :method => :delete, :confirm => 'Are you sure?'
 
+= javascript_include_tag "https://d3js.org/d3.v5.min.js"
+= javascript_include_tag "d3_graph"
 
