--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,3 +62,84 @@ form label {
     font-weight: bold;
     color: maroon;
 }
+
+/* ------------------------------- Begin Style for d3 View ------------------------------------ */
+
+* {
+    font-family: Arial;
+}
+
+svg {
+    background-color: #FFF;
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+svg:not(.active):not(.ctrl) {
+    cursor: crosshair;
+}
+
+path.link {
+    fill: none;
+    stroke: #000;
+    stroke-width: 4px;
+    cursor: default;
+}
+
+svg:not(.active):not(.ctrl) path.link {
+    cursor: pointer;
+}
+
+path.link.selected {
+    stroke-dasharray: 10,2;
+}
+
+path.link.dragline {
+    pointer-events: none;
+}
+
+path.link.hidden {
+    stroke-width: 0;
+}
+
+circle.node {
+    stroke-width: 1.5px;
+    cursor: pointer;
+}
+
+circle.node.reflexive {
+    stroke: #000 !important;
+    stroke-width: 2.5px;
+}
+
+text {
+    font: 12px sans-serif;
+    pointer-events: none;
+}
+
+text.id {
+    text-anchor: middle;
+    font-weight: bold;
+}
+
+.d3-container {
+    width: 100%;
+    height: 500px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #8491B5;
+    border-radius: 5px;
+    background-color: #F0F5FC;
+    fill: #2B2B2B; /* chagnes text color */
+}
+
+
+.nav-bar {
+
+}
+
+/* ------------------------------- End Style for d3 View ------------------------------------ */
