--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,11 +1,22 @@
+:root {
+    --background-grey: #F8F8F8;
+    --delete-red: #BC2B2B;
+    --text-grey: #5A5A5A;
+    --primary-blue: #2B84BC;
+    --secondary-blue: #032E5C;
+}
+
 html, body {
     margin: 0;
     padding: 0;
     background: White;
-    color: DarkSlateGrey;
-    font-family: Tahoma, Verdana, sans-serif;
-    font-size: 10pt;
+    color: var(--text-grey);
+    background-color: var(--background-grey);
+    font-family: Arial, sans-serif;
+    font-size: 14pt;
+
 }
+
 div#main {
     margin: 0;
     padding: 0 20px 20px;
@@ -61,6 +72,100 @@ form label {
     line-height: 25px;
     font-weight: bold;
     color: maroon;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+    font-family: inherit; /* 1 */
+    font-size: 100%; /* 1 */
+    line-height: 1.15; /* 1 */
+    margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+    overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+    text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+    -webkit-appearance: button;
+}
+
+.button {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    font-family: Arial, sans-serif;
+    width: 130px;
+    height: 50px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.delete-button {
+    background-color: var(--delete-red);
+}
+
+.back-button {
+    background-color: var(--primary-blue);
+}
+
+.content-card {
+    background-color: white;
+    padding: 20px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.card-header {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.nav-bar {
+    width: 100%;
+    height: 60px;
+    background-color: var(--secondary-blue);
+    display: flex;
+    /* flex-direction: column;*/
+    align-items: center
+}
+
+.nav-bar-title {
+    margin-left: 20px;
+    font-size: 36px;
+    font-family: Aileron, sans-serif;
+    color: white;
 }
 
 /* ------------------------------- Begin Style for d3 View ------------------------------------ */
@@ -129,17 +234,23 @@ text.id {
 .d3-container {
     width: 100%;
     height: 500px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #8491B5;
     border-radius: 5px;
     background-color: #F0F5FC;
-    fill: #2B2B2B; /* chagnes text color */
+    fill: #2B2B2B; /* changes text color */
 }
 
 
-.nav-bar {
-
+.content-container {
+    width: 900px;
+    max-width: 100%;
+    margin: auto;
 }
 
 /* ------------------------------- End Style for d3 View ------------------------------------ */
+
+
+.drop-shadow {
+    -webkit-box-shadow: 0px 0px 11px -5px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 11px -5px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 11px -5px rgba(0,0,0,0.3);
+}
