--- a/app/views/jsonfiles/show.html.erb
+++ b/app/views/jsonfiles/show.html.erb
@@ -1,7 +1,9 @@
 <% # in app/views/jsonfiles/show.html.haml %>
 <div class="content-container">
+  <div class="back">
     <%= link_to 'Back to jsonfile list', jsonfiles_path %>
-    <%= button_to 'Back', :back, :class => 'button back-button drop-shadow' %>
+  </div>
+
 
     <div class="content-card drop-shadow">
         <div class="card-header">
@@ -16,7 +18,9 @@
 
 
   <%= button_to 'Delete', jsonfile_path(@jsonfile), :method => :delete, :confirm => 'Are you sure?', :class => 'button delete-button drop-shadow' %>
-
+  <p>
+    Click and drag to pan, scroll up and down to zoom.
+  </p>
   <script>
       // pull json to use in d3 graph visualization
       var jsonString = document.getElementById('json-content').innerText;
