--- a/app/views/xfiles/show.html.erb
+++ b/app/views/xfiles/show.html.erb
@@ -1,23 +1,23 @@
 <% # in app/views/jsonfiles/show.html.haml %>
 <div class="content-container">
   <div class="back">
-    <%= link_to 'Back to jsonfile list', jsonfiles_path %>
+    <%= link_to 'Back to file list', xfiles_path %>
   </div>
 
 
     <div class="content-card drop-shadow">
         <div class="card-header">
-          <%= @jsonfile.name %>
+          <%= @xfile.name %>
         </div>
 
         <div id="json-content" class="body-text">
-          <%= eval(@jsonfile.content).to_json %>
+          <%= eval(@xfile.content).to_json %>
         </div>
       </li>
     </div>
 
 
-  <%= button_to 'Delete', jsonfile_path(@jsonfile), :method => :delete, :confirm => 'Are you sure?', :class => 'button delete-button drop-shadow' %>
+  <%= button_to 'Delete', xfile_path(@xfile), :method => :delete, :confirm => 'Are you sure?', :class => 'button delete-button drop-shadow' %>
   <p>
     Click and drag to pan, scroll up and down to zoom.
   </p>
