--- a/app/views/xfiles/index.html.haml
+++ b/app/views/xfiles/index.html.haml
@@ -1,10 +1,7 @@
 -#  This file is app/views/xiles/index.html.haml
-%h1 All Files
+%h1 Uploaded Files
 
 %table#xfiles
-  %thead
-    %tr
-      %th= "File"
   %tbody
     - @xfiles.each do |xfile|
       %tr
