--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -173,6 +173,19 @@ button,
     color: white;
 }
 
+.label_title {
+    font-family: Arial;
+    font-size: 25px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #252525;
+    padding-bottom: 2%;
+    padding-top: 2%;
+}
+
 /* ------------------------------- Begin Style for d3 View ------------------------------------ */
 
 * {
