--- a/app/views/xfiles/show.html.erb
+++ b/app/views/xfiles/show.html.erb
@@ -24,8 +24,11 @@
     Properties
   </div>
 
-
-  <%= button_to 'Delete', xfile_path(@xfile), :method => :delete, :confirm => 'Are you sure?', :class => 'button delete-button drop-shadow' %>
+  <div class="prop_container">
+    <div class="prop-button">prop1</div>
+    <div class="prop-button">prop2</div>
+    <div class="prop-button">prop3</div>
+  </div>
 
   <div class="label_title">
     Graph of Properties
@@ -40,6 +43,10 @@
   </script>
   <%= javascript_include_tag "https://d3js.org/d3.v5.min.js" %>
   <%= javascript_include_tag "d3_graph" %>
+
+
+  <%= button_to 'Delete File', xfile_path(@xfile), :method => :delete, :confirm => 'Are you sure?', :class => 'button delete-button drop-shadow' %>
+
 
 </div>
 
