--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -137,6 +137,18 @@ button,
     background-color: var(--primary-blue);
 }
 
+.prop-button {
+    width: 76px;
+    height: 23px;
+    border-radius: 11.5px;
+    box-shadow: 0 0 11px -5px rgba(0, 0, 0, 0.3);
+    background-color: #ffffff;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: center;
+}
+
 .back {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -184,6 +196,11 @@ button,
     color: #252525;
     padding-bottom: 2%;
     padding-top: 2%;
+}
+
+.prop_container {
+    display: flex; /* or inline-flex */
+    flex-wrap: wrap;
 }
 
 /* ------------------------------- Begin Style for d3 View ------------------------------------ */
