added property listing, added .keep to assets

--- a/app/views/xfiles/show.html.erb
+++ b/app/views/xfiles/show.html.erb
@@ -24,10 +24,14 @@
     Properties
   </div>
 
-  <div class="prop_container">
+  <!--div class="prop_container">
     <div class="prop-button">prop1</div>
     <div class="prop-button">prop2</div>
     <div class="prop-button">prop3</div>
+  </div-->
+
+  <div id="file_properties" class="body_text">
+    <%= @properties %>
   </div>
 
   <div class="label_title">
