--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,15 +140,20 @@ button,
 }
 
 .prop-button {
-    width: 76px;
-    height: 23px;
+    width: auto;
+    height: auto;
     border-radius: 11.5px;
     box-shadow: 0 0 11px -5px rgba(0, 0, 0, 0.3);
     background-color: #ffffff;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 2%;
+    padding-right: 2%;
+    margin: .5%;
     display: flex;
     justify-content: center;
+}
+
+.prop-button:hover {
+    color: var(--primary-blue);
 }
 
 .back {
