--- a/app/views/xfiles/show.html.erb
+++ b/app/views/xfiles/show.html.erb
@@ -19,13 +19,15 @@
         </pre>
       </li>
     </div>
-  <div id= "file_properties" class="body_text">
-    <%= @properties %>
-  </div>
+
 
   <div class="label_title">
     Properties
   </div>
+
+  <p>
+    Click on property to show files that have share this property
+  </p>
 
   <div class="prop_container">
     <% @properties.each do |prop| %>
